--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             >Web<span class="header-logo-color">Studio</span></a
           >
           <ul class="header-list">
-            <li><a class="list-item" href="./index.html">Studio</a></li>
+            <li><a class="list-item current" href="./index.html">Studio</a></li>
             <li><a class="list-item" href="">Portfolio</a></li>
             <li><a class="list-item" href="">Contacts</a></li>
           </ul>
@@ -52,7 +52,7 @@
       </div>
     </header>
     <main>
-      <section class="our-main-section">
+      <section class="main-section">
         <div class="container div-main-container">
           <h1 class="main-title">Effective Solutions for Your Business</h1>
           <button type="button" class="main-button">Order Service</button>
@@ -63,6 +63,11 @@
           <h2 class="visually-hidden">Features</h2>
           <ul class="features">
             <li class="features-list-item">
+              <div class="div-features-icon">
+                <svg class="icon-features" width="64" height="64">
+                  <use href="./images/icon.svg#icon-antenna-1"></use>
+                </svg>
+              </div>
               <h3 class="list-features">Strategy</h3>
               <p class="text-features">
                 Our goal is to identify the business problem to walk away with
@@ -70,6 +75,11 @@
               </p>
             </li>
             <li class="features-list-item">
+              <div class="div-features-icon">
+                <svg class="icon-features" width="64" height="64">
+                  <use href="./images/icon.svg#icon-clock-1"></use>
+                </svg>
+              </div>
               <h3 class="list-features">Punctuality</h3>
               <p class="text-features">
                 Bring the key message to the brand's audience for the best price
@@ -77,6 +87,11 @@
               </p>
             </li>
             <li class="features-list-item">
+              <div class="div-features-icon">
+                <svg class="icon-features" width="64" height="64">
+                  <use href="./images/icon.svg#icon-diagram-1"></use>
+                </svg>
+              </div>
               <h3 class="list-features">Diligence</h3>
               <p class="text-features">
                 Research and confirm brands that present the strongest digital
@@ -84,6 +99,11 @@
               </p>
             </li>
             <li class="features-list-item">
+              <div class="div-features-icon">
+                <svg class="icon-features" width="64" height="64">
+                  <use href="./images/icon.svg#icon-astronaut-1"></use>
+                </svg>
+              </div>
               <h3 class="list-features">Technologies</h3>
               <p class="text-features">
                 Design practice focused on digital experiences. We bring forth a
@@ -107,6 +127,36 @@
               <div class="worker-list-item">
                 <h3 class="our-team-names">Mark Guerrero</h3>
                 <p class="team-descr">Product Designer</p>
+                <ul class="icon-list">
+                  <li class="icon-item">
+                    <a href="" target="_blank" class="icon-link">
+                      <svg class="icon-app" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a href="" target="_blank" class="icon-link">
+                      <svg class="icon-app" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a href="" target="_blank" class="icon-link">
+                      <svg class="icon-app" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a href="" target="_blank" class="icon-link">
+                      <svg class="icon-app" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="worker-item">
@@ -119,6 +169,36 @@
               <div class="worker-list-item">
                 <h3 class="our-team-names">Tom Ford</h3>
                 <p class="team-descr">Frontend Developer</p>
+                <ul class="icon-list">
+                  <li class="icon-item">
+                    <a href="" target="_blank" class="icon-link">
+                      <svg class="icon-app" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a href="" target="_blank" class="icon-link">
+                      <svg class="icon-app" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a href="" target="_blank" class="icon-link">
+                      <svg class="icon-app" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a href="" target="_blank" class="icon-link">
+                      <svg class="icon-app" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="worker-item">
@@ -131,6 +211,36 @@
               <div class="worker-list-item">
                 <h3 class="our-team-names">Camila Garcia</h3>
                 <p class="team-descr">Marketing</p>
+                <ul class="icon-list">
+                  <li class="icon-item">
+                    <a href="" target="_blank" class="icon-link">
+                      <svg class="icon-app" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a href="" target="_blank" class="icon-link">
+                      <svg class="icon-app" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a href="" target="_blank" class="icon-link">
+                      <svg class="icon-app" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a href="" target="_blank" class="icon-link">
+                      <svg class="icon-app" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="worker-item">
@@ -143,6 +253,36 @@
               <div class="worker-list-item">
                 <h3 class="our-team-names">Daniel Wilson</h3>
                 <p class="team-descr">UI Designer</p>
+                <ul class="icon-list">
+                  <li class="icon-item">
+                    <a href="" target="_blank" class="icon-link">
+                      <svg class="icon-app" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a href="" target="_blank" class="icon-link">
+                      <svg class="icon-app" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a href="" target="_blank" class="icon-link">
+                      <svg class="icon-app" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a href="" target="_blank" class="icon-link">
+                      <svg class="icon-app" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -160,7 +300,14 @@
               </div>
             </li>
             <li class="first-item-list">
-              <img src="./images/img6.jpg" alt="picture" width="360" />
+              <div class="div-portfolio">
+                <img src="./images/img6.jpg" alt="picture" width="360" />
+                <p class="portfolio-list-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="div-portfolio-item">
                 <h3 class="portfolio-items">Cashless Payment</h3>
                 <p class="portfolio-text">Marketing</p>
@@ -199,14 +346,49 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container our-footer-container">
-        <a class="footer-logo" href="./index.html"
-          >Web<span class="footer-logo-color">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container-div">
+        <div class="container our-footer-container">
+          <a class="footer-logo" href="./index.html"
+            >Web<span class="footer-logo-color">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="div-footer">
+          <p class="footer-text">Social media</p>
+          <ul class="icon-list">
+            <li class="icon-item">
+              <a href="" target="_blank" class="footer-icon">
+                <svg class="icon-app" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-item">
+              <a href="" target="_blank" class="footer-icon">
+                <svg class="icon-app" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-item">
+              <a href="" target="_blank" class="footer-icon">
+                <svg class="icon-app" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-item">
+              <a href="" target="_blank" class="footer-icon">
+                <svg class="icon-app" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
