--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
           <div class="form-div">
             <label class="modal-name" for="user-name">Name</label>
             <div class="modal-input-div">
-              <input type="text" class="modal-input" id="user-name" required />
+              <input type="text" name="user-name" class="modal-input" id="user-name" required />
               <svg width="18" height="24" class="modal-icon">
                 <use href="./images/icons.svg#icon-Vector-3"></use>
               </svg>
