--- a/index.html
+++ b/index.html
@@ -450,24 +450,26 @@
         <form>
           <div class="form-div">
             <label class="modal-name" for="user-name">Name</label>
-            <div class="modal-input-div">
+              <div class="modal-input-div">
               <input type="text" name="user-name" class="modal-input" id="user-name" required />
               <svg width="18" height="24" class="modal-icon">
                 <use href="./images/icons.svg#icon-Vector-3"></use>
               </svg>
             </div>
+            </div>
             <div class="form-div">
-              <label class="modal-name" for="user-number">Phone</label>
+              <label class="modal-name" for="user-phone">Phone</label>
               <div class="modal-input-div">
-                <input type="tel" class="modal-input" id="user-number" required />
+                <input type="tel" name="user-phone" class="modal-input" id="user-phone" required />
                 <svg width="18" height="24" class="modal-icon">
                   <use href="./images/icons.svg#icon-Vector"></use>
                 </svg>
               </div>
+              </div>
               <div class="form-div">
                 <label class="modal-name" for="user-email">Email</label>
                 <div class="modal-input-div">
-                  <input type="email" class="modal-input" id="user-email" required />
+                  <input type="email" name="user-email" class="modal-input" id="user-email" required />
                   <svg width="18" height="24" class="modal-icon">
                     <use href="./images/icons.svg#icon-Vector-1"></use>
                   </svg>
@@ -475,19 +477,19 @@
           </div>
           <div class="form-text-div">
             <label class="form-text-label" for="user-comment">Comment</label>
-            <textarea class="modal-text-comment" id="user-comment" placeholder="Text input"></textarea>
+            <textarea class="modal-text-comment" name="user-comment" id="user-comment" placeholder="Text input" required></textarea>
           </div>
           <div class="checkbox-div">
-            <input type="checkbox" id="user-checkbox" class="input-checkbox">
-            <label for="user-checkbox" class="label-checkbox">
+            <label for="user-checkbox" class="label-checkbox" for="user-privacy">
+              <input type="checkbox" id="user-checkbox" class="input-checkbox" name="user-privacy" value="true" required>
+              <p>I accept the terms and conditions of the <a href="" class="text-link">Privacy Policy</a></p>
               <span class="custom-checkbox">
                 <svg class="svg-checkbox" width="16" height="16">
                   <use href="./images/icons.svg#icon-Vector-2"></use>
                 </svg>
-              <p>I accept the terms and conditions of the <a href="" class="text-link">Privacy Policy</a></p>
               </span>
             </label>
-            <button type="button" class="form-button">Send</button>
+            <button type="submit" class="form-button-div">Send</button>
           </div>
         </form>
       </div>
