--- a/index.html
+++ b/index.html
@@ -481,6 +481,7 @@
           </div>
           <div class="checkbox-div">
             <label for="user-checkbox" class="label-checkbox" for="user-privacy">
+              <div class="footer-comment-div">
               <input type="checkbox" id="user-checkbox" class="input-checkbox" name="user-privacy" value="true" required>
               <p>I accept the terms and conditions of the <a href="" class="text-link">Privacy Policy</a></p>
               <span class="custom-checkbox">
@@ -488,6 +489,7 @@
                   <use href="./images/icons.svg#icon-Vector-2"></use>
                 </svg>
               </span>
+              </div>
             </label>
             <button type="submit" class="form-button-div">Send</button>
           </div>
