--- a/index.html
+++ b/index.html
@@ -480,18 +480,17 @@
             <textarea class="modal-text-comment" name="user-comment" id="user-comment" placeholder="Text input" required></textarea>
           </div>
           <div class="checkbox-div">
-            <label for="user-checkbox" class="label-checkbox" for="user-privacy">
-              <div class="footer-comment-div">
+            <label class="label-checkbox" for="user-privacy">
               <input type="checkbox" id="user-checkbox" class="input-checkbox" name="user-privacy" value="true" required>
-              <p>I accept the terms and conditions of the <a href="" class="text-link">Privacy Policy</a></p>
               <span class="custom-checkbox">
                 <svg class="svg-checkbox" width="16" height="16">
                   <use href="./images/icons.svg#icon-Vector-2"></use>
                 </svg>
               </span>
-              </div>
             </label>
-             </div>
+            <div class="footer-comment-div">
+              <p>I accept the terms and conditions of the <a href="" class="text-link">Privacy Policy</a></p>
+          </div>
             <button type="submit" class="form-button-div">Send</button>
           </div>
         </form>
