--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
             <textarea class="modal-text-comment" name="user-comment" id="user-comment" placeholder="Text input" required></textarea>
           </div>
           <div class="checkbox-div">
-            <input type="checkbox" id="user-checkbox" class="input-checkbox" name="user-privacy" value="true" required>
+            <input type="checkbox" id="user-privacy" class="input-checkbox visually-hidden" name="user-privacy" value="true" required>
               <div class="footer-comment-div">
                 <label class="label-checkbox" for="user-privacy"></label>
               <p>I accept the terms and conditions of the <a href="" class="text-link">Privacy Policy</a></p>
