--- a/index.html
+++ b/index.html
@@ -481,15 +481,14 @@
           </div>
           <div class="checkbox-div">
             <input type="checkbox" id="user-privacy" class="input-checkbox visually-hidden" name="user-privacy" value="true" required>
-              <div class="footer-comment-div">
-                <label class="label-checkbox" for="user-privacy"></label>
+                <label class="label-checkbox" for="user-privacy">
               <p>I accept the terms and conditions of the <a href="" class="text-link">Privacy Policy</a></p>
+              </label>
               <span class="custom-checkbox">
                 <svg class="svg-checkbox" width="16" height="16">
                   <use href="./images/icons.svg#icon-Vector-2"></use>
                 </svg>
               </span>
-              </div>
             </div>
             <button type="submit" class="form-button-div">Send</button>
           </div>
