--- a/index.html
+++ b/index.html
@@ -482,8 +482,8 @@
           <div class="checkbox-div">
             <input type="checkbox" id="user-privacy" class="input-checkbox visually-hidden" name="user-privacy" value="true" required>
                 <label class="label-checkbox" for="user-privacy">
-              <p>I accept the terms and conditions of the <a href="" class="text-link">Privacy Policy</a></p>
-              <span class="custom-checkbox">
+              <p>I accept the terms and conditions of the <a href="" class="text-link-footer">Privacy Policy</a></p>
+              <span class="custom-checkbox-footer">
                 <svg class="svg-checkbox" width="16" height="16">
                   <use href="./images/icons.svg#icon-Vector-2"></use>
                 </svg>
