--- a/index.html
+++ b/index.html
@@ -480,10 +480,10 @@
             <textarea class="modal-text-comment" name="user-comment" id="user-comment" placeholder="Text input" required></textarea>
           </div>
           <div class="checkbox-div">
-            <input type="checkbox" id="user-privacy" class="input-checkbox visually-hidden" name="user-privacy" value="true" required>
+            <input type="checkbox" id="user-privacy" class="input-checkbox visually-hidden" name="user-privacy" value="true" required checked>
             <label class="label-checkbox" for="user-privacy">
               <span class="custom-checkbox-footer">
-                <svg class="svg-checkbox" width="16" height="16">
+                <svg class="svg-checkbox" width="10" height="8">
                   <use href="./images/icons.svg#icon-Vector-2"></use>
                 </svg>
               </span>
