--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
                   <use href="./images/icons.svg#icon-Vector-2"></use>
                 </svg>
               </span>
-              <p>I accept the terms and conditions of the <a href="" class="text-link-footer">Privacy Policy</a></p>
+              I accept the terms and conditions of the <a href="" class="text-link-footer">Privacy Policy</a>
               </label>
             </div>
             <button type="submit" class="form-button-div">Send</button>
