--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
       <section class="main-section">
         <div class="container div-main-container">
           <h1 class="main-title">Effective Solutions for Your Business</h1>
-          <button type="button" class="main-button" data-modal-open>Order Service</button>
+          <button type="button" class="main-button" data-modal-open>
+            Order Service
+          </button>
         </div>
       </section>
       <section class="our-features-section">
@@ -424,18 +426,25 @@
             </li>
           </ul>
         </div>
-          <div class="footer-form-div">
-            <p class="form-text">Subscribe</p>
-            <form class="footer-email-form">
-          <label class="footer-form-name" for="user-email">
-              <input type="email" name="user-email" class="footer-form" id="user-email" placeholder="E-mail">
-          </label>
-              <button type="submit" class="footer-button-div">Subscribe <svg class="icon-send" width="24" height="24">
+        <div class="footer-form-div">
+          <p class="form-text">Subscribe</p>
+          <form class="footer-email-form">
+            <label class="footer-form-name" for="user-email">
+              <input
+                type="email"
+                name="user-email"
+                class="footer-form"
+                id="user-email"
+                placeholder="E-mail"
+              />
+            </label>
+            <button type="submit" class="footer-button-div">
+              Subscribe
+              <svg class="icon-send" width="24" height="24">
                 <use href="./images/icons.svg#icon-icon-send"></use>
-                </svg>
-              </button>
-             </form>
-          </div>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
@@ -450,49 +459,81 @@
         <form>
           <div class="form-div">
             <label class="modal-name" for="user-name">Name</label>
-              <div class="modal-input-div">
-              <input type="text" name="user-name" class="modal-input" id="user-name" required />
+            <div class="modal-input-div">
+              <input
+                type="text"
+                name="user-name"
+                class="modal-input"
+                id="user-name"
+                required
+              />
               <svg width="18" height="24" class="modal-icon">
                 <use href="./images/icons.svg#icon-Vector-3"></use>
               </svg>
             </div>
+          </div>
+          <div class="form-div">
+            <label class="modal-name" for="user-phone">Phone</label>
+            <div class="modal-input-div">
+              <input
+                type="tel"
+                name="user-phone"
+                class="modal-input"
+                id="user-phone"
+                required
+              />
+              <svg width="18" height="24" class="modal-icon">
+                <use href="./images/icons.svg#icon-Vector"></use>
+              </svg>
             </div>
-            <div class="form-div">
-              <label class="modal-name" for="user-phone">Phone</label>
-              <div class="modal-input-div">
-                <input type="tel" name="user-phone" class="modal-input" id="user-phone" required />
-                <svg width="18" height="24" class="modal-icon">
-                  <use href="./images/icons.svg#icon-Vector"></use>
-                </svg>
-              </div>
-              </div>
-              <div class="form-div">
-                <label class="modal-name" for="user-email">Email</label>
-                <div class="modal-input-div">
-                  <input type="email" name="user-email" class="modal-input" id="user-email" required />
-                  <svg width="18" height="24" class="modal-icon">
-                    <use href="./images/icons.svg#icon-Vector-1"></use>
-                  </svg>
-                </div>
+          </div>
+          <div class="form-div">
+            <label class="modal-name" for="user-email">Email</label>
+            <div class="modal-input-div">
+              <input
+                type="email"
+                name="user-email"
+                class="modal-input"
+                id="user-email"
+                required
+              />
+              <svg width="18" height="24" class="modal-icon">
+                <use href="./images/icons.svg#icon-Vector-1"></use>
+              </svg>
+            </div>
           </div>
           <div class="form-text-div">
             <label class="modal-name" for="user-comment">Comment</label>
-            <textarea class="modal-text-comment" name="user-comment" id="user-comment" placeholder="Text input" required></textarea>
+            <textarea
+              class="modal-text-comment"
+              name="user-comment"
+              id="user-comment"
+              placeholder="Text input"
+              required
+            ></textarea>
           </div>
           <div class="checkbox-div">
-            <input type="checkbox" id="user-privacy" class="input-checkbox visually-hidden" name="user-privacy" value="true" required>
+            <input
+              type="checkbox"
+              id="user-privacy"
+              class="input-checkbox visually-hidden"
+              name="user-privacy"
+              value="true"
+              required
+            />
             <label class="label-checkbox" for="user-privacy">
               <span class="custom-checkbox-footer">
                 <svg class="svg-checkbox" width="10" height="8">
                   <use href="./images/icons.svg#icon-Vector-2"></use>
                 </svg>
               </span>
-              I accept the terms and conditions of the <a href="" class="text-link-footer">Privacy Policy</a>
-              </label>
-            </div>
-            <button type="submit" class="form-button-div">Send</button>
-            </form>
+              I accept the terms and conditions of the
+              <a href="" class="text-link-footer">Privacy Policy</a>
+            </label>
           </div>
+          <button type="submit" class="form-button-div">Send</button>
+        </form>
+      </div>
     </div>
     <script src="./js/modal.js"></script>
   </body>
