--- a/index.html
+++ b/index.html
@@ -49,6 +49,77 @@
             </li>
           </ul>
         </address>
+        <button class="header-button" type="button">
+          <svg class="header-icon" width="24" height="24">
+            <use href="./images/icon.svg#icon-heroicons-solid_menu"></use>
+          </svg>
+        </button>
+      </div>
+      <div class="mobile-menu">
+        <div class="container mobile-menu-container">
+          <button class="mobile-menu-close">
+            <svg class="mobile-close-button" width="8" height="8">
+              <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
+            </svg>
+          </button>
+          <nav class="mobile-menu-nav">
+            <ul class="mobile-list">
+              <li class="mobile-menu-items">Studio</li>
+              <li class="mobile-menu-items">Portfolio</li>
+              <li class="mobile-menu-items">Contacts</li>
+            </ul>
+          </nav>
+          <address class="mobile-menu-adress">
+            <ul class="mobile-menu-list">
+              <li>
+                <a
+                  class="mobile-menu-contacts"
+                  href="tel:+110001111111"
+                  target="_blank"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+              <li>
+                <a
+                  class="mobile-menu-contacts"
+                  href="mailto:info@devstudio.com"
+                  target="_blank"
+                  >info@devstudio.com</a
+                >
+              </li>
+            </ul>
+          </address>
+          <ul class="icon-list-mobile">
+            <li class="icon-item-mobile">
+              <a href="" target="_blank" class="mobile-menu-icon">
+                <svg class="icon-app" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-item-mobile">
+              <a href="" target="_blank" class="mobile-menu-icon">
+                <svg class="icon-app" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-item-mobile">
+              <a href="" target="_blank" class="mobile-menu-icon">
+                <svg class="icon-app" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-item-mobile">
+              <a href="" target="_blank" class="mobile-menu-icon">
+                <svg class="icon-app" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
     <main>
@@ -65,7 +136,7 @@
           <h2 class="visually-hidden">Features</h2>
           <ul class="features">
             <li class="features-list-item">
-              <div class="div-features-icon">
+              <div class="div-features-icon hidden">
                 <svg class="icon-features" width="64" height="64">
                   <use href="./images/icon.svg#icon-antenna-1"></use>
                 </svg>
@@ -77,7 +148,7 @@
               </p>
             </li>
             <li class="features-list-item">
-              <div class="div-features-icon">
+              <div class="div-features-icon hidden">
                 <svg class="icon-features" width="64" height="64">
                   <use href="./images/icon.svg#icon-clock-1"></use>
                 </svg>
@@ -89,7 +160,7 @@
               </p>
             </li>
             <li class="features-list-item">
-              <div class="div-features-icon">
+              <div class="div-features-icon hidden">
                 <svg class="icon-features" width="64" height="64">
                   <use href="./images/icon.svg#icon-diagram-1"></use>
                 </svg>
@@ -101,7 +172,7 @@
               </p>
             </li>
             <li class="features-list-item">
-              <div class="div-features-icon">
+              <div class="div-features-icon hidden">
                 <svg class="icon-features" width="64" height="64">
                   <use href="./images/icon.svg#icon-astronaut-1"></use>
                 </svg>
@@ -115,7 +186,7 @@
           </ul>
         </div>
       </section>
-      <section class="our-section-team">
+      <section class="our-section-team hidden">
         <div class="container div-container-team">
           <h2 class="our-second-title">Our Team</h2>
           <ul class="worker-list">
@@ -290,7 +361,7 @@
           </ul>
         </div>
       </section>
-      <section class="our-portfolio-section">
+      <section class="our-portfolio-section hidden">
         <div class="container div-portfolio-container">
           <h2 class="portfolio">Our Portfolio</h2>
           <ul class="portfolio-list">
