--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           <h2 class="visually-hidden">Features</h2>
           <ul class="features">
             <li class="features-list-item">
-              <div class="div-features-icon hidden">
+              <div class="div-features-icon">
                 <svg class="icon-features" width="64" height="64">
                   <use href="./images/icon.svg#icon-antenna-1"></use>
                 </svg>
@@ -148,7 +148,7 @@
               </p>
             </li>
             <li class="features-list-item">
-              <div class="div-features-icon hidden">
+              <div class="div-features-icon">
                 <svg class="icon-features" width="64" height="64">
                   <use href="./images/icon.svg#icon-clock-1"></use>
                 </svg>
@@ -160,7 +160,7 @@
               </p>
             </li>
             <li class="features-list-item">
-              <div class="div-features-icon hidden">
+              <div class="div-features-icon">
                 <svg class="icon-features" width="64" height="64">
                   <use href="./images/icon.svg#icon-diagram-1"></use>
                 </svg>
@@ -172,7 +172,7 @@
               </p>
             </li>
             <li class="features-list-item">
-              <div class="div-features-icon hidden">
+              <div class="div-features-icon">
                 <svg class="icon-features" width="64" height="64">
                   <use href="./images/icon.svg#icon-astronaut-1"></use>
                 </svg>
@@ -186,13 +186,14 @@
           </ul>
         </div>
       </section>
-      <section class="our-section-team hidden">
+      <section class="our-section-team">
         <div class="container div-container-team">
           <h2 class="our-second-title">Our Team</h2>
           <ul class="worker-list">
             <li class="worker-item">
               <img
                 class="photo"
+                srcset="./images/img.jpg 1x, ./images/img@2x.jpg 2x"
                 src="./images/img.jpg"
                 alt="picture"
                 width="264"
@@ -235,6 +236,7 @@
             <li class="worker-item">
               <img
                 class="photo"
+                srcset="./images/img1.jpg 1x, ./images/img1@2x.jpg 2x"
                 src="./images/img1.jpg"
                 alt="picture"
                 width="264"
@@ -277,6 +279,7 @@
             <li class="worker-item">
               <img
                 class="photo"
+                srcset="./images/img4.jpg 1x, ./images/img4@2x.jpg 2x"
                 src="./images/img4.jpg"
                 alt="picture"
                 width="264"
@@ -319,6 +322,7 @@
             <li class="worker-item">
               <img
                 class="photo"
+                srcset="./images/img3.jpg 1x, ./images/img3@2x.jpg 2x"
                 src="./images/img3.jpg"
                 alt="picture"
                 width="264"
